--- a/myjourney.html
+++ b/myjourney.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>my Journey</title>
     <link rel="stylesheet" href="myjourney.css"
 </head>
 
