--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
      <link rel="stylesheet" href="mystyle.css">
      <div class="container"></div>
         
-        <button class="button" onclick="changePage()">NEXT PAGE</button>
-    </div>
-       <script>
-        function changePage() {
-            window.location.href = "myjourney.html";
-        }
-    </script>
+        
 </head>
 <body>
     <header>
        <center>
-       <div class="textbox"> <h1>My CSTU Story
-        </h1></div>
+       <div class="textbox">
+      <h1>My CSTU Story
+        </h1></div> 
+        <div class="container"></div>
+        <nav>
+            <button class="button" onclick="changePage()">my journey</button>
+            </div>
+               <script>
+                function changePage() {
+                    window.location.href = "myjourney.html";
+                }
+            </script> <button class="button" onclick="changePage1()">my future</button>
+    <script>
+        function changePage1() {
+            window.location.href =  "myfuture.html";
+        }
+    </script>
+        </nav>
     </center> 
     </header>
 
