--- a/myfuture.html
+++ b/myfuture.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Future - อนาคตของฉัน</title>
-    <link rel="stylesheet" href="myfuture.css"
+    <link rel="stylesheet" href="myfuture.css">
 </head>
 <body>
     <button class="button" onclick="changePage()">Previous page</button>
